Reports,user features

--- a/src/main/resources/passwordRecovery.html
+++ b/src/main/resources/passwordRecovery.html
@@ -13,7 +13,7 @@
         	<p>
             	<strong>   
             	<br/>   
-        			Your Login UserID is : <a href="mailto:arjunshinde2@gmail.com" target="_blank"><tomail></a><br><br>
+        			Your Login UserID is : <a href="mailto:<tomail>" target="_blank"><tomail></a><br><br>
         			Your <span class="il">Password</span> is : <password>
         		</strong>
         	</p>
