--- a/src/main/resources/success_book.html
+++ b/src/main/resources/success_book.html
@@ -23,11 +23,11 @@
 														style="font-family: arial; font-size: 26px; color: #000000; font-weight: bold">E-Ticket</span><br>
 														<span
 														style="font-family: arial; font-size: 15px; color: #000000; font-weight: normal">
-															<span class="il">MakeMyTrip</span> Booking ID
-															-NF720295855<strong>4707</strong>
+															<span class="il"><company></span> Booking ID
+															<strong><bookid></strong>
 													</span><br> <span
 														style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal">
-															Booking Date -Tue, 29 Dec 2015</span></td>
+															Booking Date -<bookdate></span></td>
 
 												</tr>
 												<tr>
@@ -61,20 +61,17 @@
 																					<td><span
 																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal; font-style: italic">Departure</span><br>
 																						<span
-																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold">Hyderabad
-																							(HYD) </span><br> <span
+																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold"><source> </span><br> <span
 																						style="font-family: arial; font-size: 12px; color: #000000; display: block">
-																							Terminal HYD</span><span
-																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal">Fri,
-																							26 Feb 2016 <strong> 10:15 hrs</strong>
+																							Terminal <source></span><span
+																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal"><traveldate> <strong> <arrival></strong>
 																					</span></td>
 																					<td><span
 																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal; font-style: italic">Arrival</span><br>
 																						<span
-																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold">Kochi
-																							(COK) </span><br> <br> <span
-																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal">Fri,
-																							26 Feb 2016 <strong> 11:45 hrs</strong>
+																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold"><destination> </span><br> <br> <span
+																						style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal">
+																							<traveldate> <strong> <departure> </strong>
 																					</span></td>
 																				</tr>
 																			</tbody>
@@ -84,7 +81,7 @@
 																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal">Non-Stop
 																			Flight </span><br> <span
 																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal">
-																			Duration:1hr 30m</span><br> <span
+																			Duration:<duration></span><br> <span
 																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal"></span></td>
 																</tr>
 																<tr>
@@ -102,10 +99,10 @@
 																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold; border-bottom: 1px solid #2a6ebb">Passenger
 																		Name</td>
 																	<td width="25%"
-																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold; border-bottom: 1px solid #2a6ebb">Type</td>
+																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold; border-bottom: 1px solid #2a6ebb">Age</td>
 																	<td width="25%"
 																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold; border-bottom: 1px solid #2a6ebb">Airline
-																		PNR</td>
+																		</td>
 																	<td width="25%"
 																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold; border-bottom: 1px solid #2a6ebb">E-Ticket
 																		Number</td>
@@ -113,15 +110,15 @@
 																<tr>
 																	<td height="24"
 																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: bold; border-bottom: 1px dashed #000000; text-transform: capitalize">
-																		mallikarjuna rao sungisetty</td>
+																		<passenger></td>
 																	<td height="24"
-																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal; border-bottom: 1px dashed #000000">Adult</td>
+																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal; border-bottom: 1px dashed #000000"><age></td>
 																	<td height="24"
-																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal; border-bottom: 1px dashed #000000">T23ZUB</td>
+																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal; border-bottom: 1px dashed #000000"><airline></td>
 																	<td height="24"
-																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal; border-bottom: 1px dashed #000000">T23ZUB</td>
+																		style="font-family: arial; font-size: 12px; color: #000000; font-weight: normal; border-bottom: 1px dashed #000000"><ticketid></td>
 																</tr>
-
+																<copassengers>
 																
 															</tbody>
 														</table></td>
